; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_container.c_container_split.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_container.c_container_split.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_container = type { i32, i64, i32, i32, i32, i32, i32, i32, i32 }
%struct.sway_seat = type { i32 }

@FULLSCREEN_GLOBAL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sway_container* @container_split(%struct.sway_container* %0, i32 %1) #0 {
  %3 = alloca %struct.sway_container*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sway_seat*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.sway_container*, align 8
  store %struct.sway_container* %0, %struct.sway_container** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = call %struct.sway_seat* (...) @input_manager_get_default_seat()
  store %struct.sway_seat* %8, %struct.sway_seat** %5, align 8
  %9 = load %struct.sway_seat*, %struct.sway_seat** %5, align 8
  %10 = call i32* @seat_get_focus(%struct.sway_seat* %9)
  %11 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %12 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %11, i32 0, i32 2
  %13 = icmp eq i32* %10, %12
  %14 = zext i1 %13 to i32
  store i32 %14, i32* %6, align 4
  %15 = call %struct.sway_container* @container_create(i32* null)
  store %struct.sway_container* %15, %struct.sway_container** %7, align 8
  %16 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %17 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %16, i32 0, i32 8
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %20 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %19, i32 0, i32 8
  store i32 %18, i32* %20, align 8
  %21 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %22 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %21, i32 0, i32 7
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %25 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %24, i32 0, i32 7
  store i32 %23, i32* %25, align 4
  %26 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %27 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %26, i32 0, i32 6
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %30 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %29, i32 0, i32 6
  store i32 %28, i32* %30, align 8
  %31 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %32 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %31, i32 0, i32 5
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %35 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %34, i32 0, i32 5
  store i32 %33, i32* %35, align 4
  %36 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %37 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %36, i32 0, i32 4
  %38 = load i32, i32* %37, align 8
  %39 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %40 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %39, i32 0, i32 4
  store i32 %38, i32* %40, align 8
  %41 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %42 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %41, i32 0, i32 3
  %43 = load i32, i32* %42, align 4
  %44 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %45 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %44, i32 0, i32 3
  store i32 %43, i32* %45, align 4
  %46 = load i32, i32* %4, align 4
  %47 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %48 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %47, i32 0, i32 0
  store i32 %46, i32* %48, align 8
  %49 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %50 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %51 = call i32 @container_replace(%struct.sway_container* %49, %struct.sway_container* %50)
  %52 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %53 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %54 = call i32 @container_add_child(%struct.sway_container* %52, %struct.sway_container* %53)
  %55 = load i32, i32* %6, align 4
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %57, label %78

57:                                               ; preds = %2
  %58 = load %struct.sway_seat*, %struct.sway_seat** %5, align 8
  %59 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %60 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %59, i32 0, i32 2
  %61 = call i32 @seat_set_raw_focus(%struct.sway_seat* %58, i32* %60)
  %62 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  %63 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %62, i32 0, i32 1
  %64 = load i64, i64* %63, align 8
  %65 = load i64, i64* @FULLSCREEN_GLOBAL, align 8
  %66 = icmp eq i64 %64, %65
  br i1 %66, label %67, label %72

67:                                               ; preds = %57
  %68 = load %struct.sway_seat*, %struct.sway_seat** %5, align 8
  %69 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %70 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %69, i32 0, i32 2
  %71 = call i32 @seat_set_focus(%struct.sway_seat* %68, i32* %70)
  br label %77

72:                                               ; preds = %57
  %73 = load %struct.sway_seat*, %struct.sway_seat** %5, align 8
  %74 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %75 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %74, i32 0, i32 2
  %76 = call i32 @seat_set_raw_focus(%struct.sway_seat* %73, i32* %75)
  br label %77

77:                                               ; preds = %72, %67
  br label %78

78:                                               ; preds = %77, %2
  %79 = load %struct.sway_container*, %struct.sway_container** %7, align 8
  ret %struct.sway_container* %79
}

declare dso_local %struct.sway_seat* @input_manager_get_default_seat(...) #1

declare dso_local i32* @seat_get_focus(%struct.sway_seat*) #1

declare dso_local %struct.sway_container* @container_create(i32*) #1

declare dso_local i32 @container_replace(%struct.sway_container*, %struct.sway_container*) #1

declare dso_local i32 @container_add_child(%struct.sway_container*, %struct.sway_container*) #1

declare dso_local i32 @seat_set_raw_focus(%struct.sway_seat*, i32*) #1

declare dso_local i32 @seat_set_focus(%struct.sway_seat*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
